Run-files/platformio files

--- a/calibration/platformio.ini
+++ b/calibration/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+extra_configs =
+    ../firmware/platformio.ini
+
 [env]
 framework = arduino
 upload_port = /dev/ttyACM0
