--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -7,6 +7,9 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+libdeps_dir = ~/.piodeps
+
 [env]
 platform = teensy
 framework = arduino
@@ -29,7 +32,6 @@ lib_deps = https://github.com/micro-ROS/micro_ros_platformio
     SPI
     adafruit/Adafruit BusIO
     adafruit/Adafruit PWM Servo Driver Library
-build_flags = -I ../config
 
 [env:teensy41]
 board = teensy41
@@ -302,6 +304,14 @@ build_flags =
     -I ../config
     -D PICO
     -D USE_PICO_CONFIG
+
+
+[env:rens]
+board = teensy40
+build_flags =
+    -D USE_RENS_CONFIG
+    -I ../config
+
 
 ; add maintainer configurations above this line
 ; this barrier helps to reduce user merge conflict
